Fixed z-index issue with Info pop-up

--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ span {
   color: white;
   position: absolute;
   left: 18px;
-  bottom: 13px;
+  bottom: 18px;
   width: 640px;
   text-align: center;	
   overflow: hidden;	
